
; test1.toml, test1.json.expected, test1.toml.toml.toml.expected

(rule
 (deps test1.toml)
 (action
 (with-stdout-to
  test1.toml.json
  (run ../../src/toml-check/main.exe test1.toml))))

(rule
 (alias runtest)
 (deps test1.toml.json test1.json.expected)
 (action
  (diff test1.json.expected test1.toml.json)))

(rule
 (deps test1.toml)
 (action
 (with-stdout-to
  test1.toml.toml
  (run ../../src/toml-check/main.exe --to-toml test1.toml))))

(rule
 (alias runtest)
 (deps test1.toml.toml test1.toml.toml.expected)
 (action
  (diff test1.toml.toml.expected test1.toml.toml)))

(rule
 (deps test1.toml.toml)
 (action
 (with-stdout-to
  test1.toml.toml.json
  (run ../../src/toml-check/main.exe test1.toml.toml))))

(rule
 (alias runtest)
 (deps test1.toml.toml.json test1.json.expected)
 (action
  (diff test1.json.expected test1.toml.toml.json)))



; test2.toml, test2.json.expected, test2.toml.toml.toml.expected

(rule
 (deps test2.toml)
 (action
 (with-stdout-to
  test2.toml.json
  (run ../../src/toml-check/main.exe test2.toml))))

(rule
 (alias runtest)
 (deps test2.toml.json test2.json.expected)
 (action
  (diff test2.json.expected test2.toml.json)))

(rule
 (deps test2.toml)
 (action
 (with-stdout-to
  test2.toml.toml
  (run ../../src/toml-check/main.exe --to-toml test2.toml))))

(rule
 (alias runtest)
 (deps test2.toml.toml test2.toml.toml.expected)
 (action
  (diff test2.toml.toml.expected test2.toml.toml)))

(rule
 (deps test2.toml.toml)
 (action
 (with-stdout-to
  test2.toml.toml.json
  (run ../../src/toml-check/main.exe test2.toml.toml))))

(rule
 (alias runtest)
 (deps test2.toml.toml.json test2.json.expected)
 (action
  (diff test2.json.expected test2.toml.toml.json)))




; test3.toml, test3.json.expected, test3.toml.toml.toml.expected

(rule
 (deps test3.toml)
 (action
 (with-stdout-to
  test3.toml.json
  (run ../../src/toml-check/main.exe test3.toml))))

(rule
 (alias runtest)
 (deps test3.toml.json test3.json.expected)
 (action
  (diff test3.json.expected test3.toml.json)))

(rule
 (deps test3.toml)
 (action
 (with-stdout-to
  test3.toml.toml
  (run ../../src/toml-check/main.exe --to-toml test3.toml))))

(rule
 (alias runtest)
 (deps test3.toml.toml test3.toml.toml.expected)
 (action
  (diff test3.toml.toml.expected test3.toml.toml)))

(rule
 (deps test3.toml.toml)
 (action
 (with-stdout-to
  test3.toml.toml.json
  (run ../../src/toml-check/main.exe test3.toml.toml))))

(rule
 (alias runtest)
 (deps test3.toml.toml.json test3.json.expected)
 (action
  (diff test3.json.expected test3.toml.toml.json)))







; test4.toml, test4.json.expected, test4.toml.toml.toml.expected

(rule
 (deps test4.toml)
 (action
 (with-stdout-to
  test4.toml.json
  (run ../../src/toml-check/main.exe --pedantic test4.toml))))

(rule
 (alias runtest)
 (deps test4.toml.json test4.json.expected)
 (action
  (diff test4.json.expected test4.toml.json)))

(rule
 (deps test4.toml)
 (action
 (with-stdout-to
  test4.toml.toml
  (run ../../src/toml-check/main.exe --pedantic --to-toml test4.toml))))

(rule
 (alias runtest)
 (deps test4.toml.toml test4.toml.toml.expected)
 (action
  (diff test4.toml.toml.expected test4.toml.toml)))

(rule
 (deps test4.toml.toml)
 (action
 (with-stdout-to
  test4.toml.toml.json
  (run ../../src/toml-check/main.exe test4.toml.toml))))

(rule
 (alias runtest)
 (deps test4.toml.toml.json test4.json.expected)
 (action
  (diff test4.json.expected test4.toml.toml.json)))
